# gripperz

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile.in  README.md
src/: CMakeLists.txt  context.hpp  evaluation.hpp  geometry.hpp  grasps.hpp  gripperz.hpp  loaders.hpp  math.hpp  models.hpp  optimization.hpp  parametrization.hpp  process.hpp  shards.hpp  simulation.hpp  simulator.hpp  util.hpp
src/context/: CMakeLists.txt  Context.cpp  Context.hpp  TaskDescription.cpp  TaskDescription.hpp
src/evaluation/: AlignmentCalculator.cpp  AlignmentCalculator.hpp  AllPosesAlignment.cpp  AllPosesAlignment.hpp  CMakeLists.txt  ClusteringAlignment.cpp  ClusteringAlignment.hpp  ConstrainedGripperEvaluator.cpp  ConstrainedGripperEvaluator.hpp  GripperEvaluationManager.cpp  GripperEvaluationManager.hpp  GripperEvaluationManagerBuilder.cpp  GripperEvaluationManagerBuilder.hpp  GripperEvaluationManagerFactory.cpp  GripperEvaluationManagerFactory.hpp  GripperEvaluator.cpp  GripperEvaluator.hpp  GripperObjectiveFunction.cpp  GripperObjectiveFunction.hpp  GripperQualityExtractor.cpp  GripperQualityExtractor.hpp  IndexGripperQualityExtractor.cpp  IndexGripperQualityExtractor.hpp  OldGripperEvaluator.cpp  OldGripperEvaluator.hpp  QualityIndexCalculator.cpp  QualityIndexCalculator.hpp  RobustEvaluationManager.cpp  RobustEvaluationManager.hpp  SimpleAlignment.cpp  SimpleAlignment.hpp  StablePoseAlignment.cpp  StablePoseAlignment.hpp  StandardEvaluationManager.cpp  StandardEvaluationManager.hpp  Types.cpp  Types.hpp  VersorAlignment.cpp  VersorAlignment.hpp  calculators.hpp
src/geometry/: Beam.cpp  Beam.hpp  BeamFactory.cpp  BeamFactory.hpp  CMakeLists.txt  EulerBeam.cpp  EulerBeam.hpp  GeometryUtils.cpp  GeometryUtils.hpp  JawPrimitive.cpp  JawPrimitive.hpp  MeshGenerator.cpp  MeshGenerator.hpp  OldFingerGenerator.cpp  OldFingerGenerator.hpp  OpenSCADGenerator.cpp  OpenSCADGenerator.hpp  ParametrizedMeshGenerator.cpp  ParametrizedMeshGenerator.hpp  loaders.hpp
src/grasps/: CMakeLists.txt  GraspDatabase.cpp  GraspDatabase.hpp  GraspPlanner.cpp  GraspPlanner.hpp  GraspSource.cpp  GraspSource.hpp  GraspSourceDecorator.cpp  GraspSourceDecorator.hpp  GraspStatistics.cpp  GraspStatistics.hpp  SurfaceSample.cpp  SurfaceSample.hpp  TaskGenerator.cpp  TaskGenerator.hpp  TaskStatistics.cpp  TaskStatistics.hpp  Types.cpp  Types.hpp  databases.hpp  decorators.hpp  filters.hpp  planners.hpp
src/loaders/: CMakeLists.txt  GripperXMLLoader.cpp  GripperXMLLoader.hpp  Loader.cpp  Loader.hpp  TaskDescriptionLoader.cpp  TaskDescriptionLoader.hpp
src/math/: BoxConstraint.cpp  BoxConstraint.hpp  CMakeLists.txt  CallbackFunction.cpp  CallbackFunction.hpp  CombineLog.cpp  CombineLog.hpp  CombineObjectives.cpp  CombineObjectives.hpp  CombineObjectivesFactory.cpp  CombineObjectivesFactory.hpp  CombineProduct.cpp  CombineProduct.hpp  CombineSum.cpp  CombineSum.hpp  CombinedFunction.cpp  CombinedFunction.hpp  ConstrainedFunction.cpp  ConstrainedFunction.hpp  Constraint.cpp  Constraint.hpp  DlibFunction.cpp  DlibFunction.hpp  DlibWrapper.cpp  DlibWrapper.hpp  MappedFunction.cpp  MappedFunction.hpp  MultiObjectiveFunction.cpp  MultiObjectiveFunction.hpp  ObjectiveFunction.cpp  ObjectiveFunction.hpp  ObjectiveFunctionDecorator.cpp  ObjectiveFunctionDecorator.hpp  ParameterMapping.cpp  ParameterMapping.hpp  RevertedFunction.cpp  RevertedFunction.hpp  Types.cpp  Types.hpp
src/models/: AdaptedWorkcellGripper.cpp  AdaptedWorkcellGripper.hpp  BasicParametrizedGripper.cpp  BasicParametrizedGripper.hpp  CMakeLists.txt  Gripper.cpp  Gripper.hpp  GripperBuilder.cpp  GripperBuilder.hpp  GripperFactory.cpp  GripperFactory.hpp  GripperQuality.cpp  GripperQuality.hpp  GripperQualityFactory.cpp  GripperQualityFactory.hpp  GripperQualityImpl.cpp  GripperQualityImpl.hpp  MapGripperBuilder.cpp  MapGripperBuilder.hpp  ModifiedWorkcellGripper.cpp  ModifiedWorkcellGripper.hpp  OldGripper.cpp  OldGripper.hpp  OldGripperQuality.cpp  OldGripperQuality.hpp  ParallelFingerGripper.cpp  ParallelFingerGripper.hpp  ParametrizedGeometryGripper.cpp  ParametrizedGeometryGripper.hpp  ParametrizedGripper.cpp  ParametrizedGripper.hpp  PrototypeGripperBuilder.cpp  PrototypeGripperBuilder.hpp  StandardGripper.cpp  StandardGripper.hpp  Types.cpp  Types.hpp  WorkcellGripper.cpp  WorkcellGripper.hpp  loaders.hpp
src/old/: CMakeLists.txt  alignment_test.cpp  extract_poses.cpp  gripper_landscape.cpp  gripper_optimizer.cpp  gripper_space.cpp  objective_example.cpp  testDlibRosenbrock.cpp  testGripperEvaluator.cpp  testGripperObjective.cpp  testOptimization.cpp  testRobustEvaluation.cpp  trying_opt.cpp
src/optimization/: BOBYQAOptimizer.cpp  BOBYQAOptimizer.hpp  CMakeLists.txt  CombineLog.cpp  CombineLog.hpp  CombineObjectives.cpp  CombineObjectives.hpp  CombineObjectivesFactory.cpp  CombineObjectivesFactory.hpp  CombineProduct.cpp  CombineProduct.hpp  CombineSum.cpp  CombineSum.hpp  CombinedFunction.cpp  CombinedFunction.hpp  CoordinateDescentOptimizer.cpp  CoordinateDescentOptimizer.hpp  DlibFunction.cpp  DlibFunction.hpp  DlibUtil.cpp  DlibUtil.hpp  DlibWrapper.cpp  DlibWrapper.hpp  GripperOptimizationManager.cpp  GripperOptimizationManager.hpp  MappedFunction.cpp  MappedFunction.hpp  MultiObjectiveFunction.cpp  MultiObjectiveFunction.hpp  ObjectiveFunction.cpp  ObjectiveFunction.hpp  ObjectiveFunctionDecorator.cpp  ObjectiveFunctionDecorator.hpp  OptimizationManager.cpp  OptimizationManager.hpp  Optimizer.cpp  Optimizer.hpp  OptimizerFactory.cpp  OptimizerFactory.hpp  ParameterMapping.cpp  (+11 more)
src/parametrization/: CMakeLists.txt  MultiParametrizationTranslator.cpp  MultiParametrizationTranslator.hpp  Parametrization.cpp  Parametrization.hpp  ParametrizationTranslator.cpp  ParametrizationTranslator.hpp  Parametrized.cpp  Parametrized.hpp  ParametrizedMultiObjectiveFunction.cpp  ParametrizedMultiObjectiveFunction.hpp  ParametrizedObjective.cpp  ParametrizedObjective.hpp  Types.cpp  (+6 more)
test/: CMakeLists.txt  testBasicSimulator.cpp  testCombineObjectives.cpp  testDlibRosenbrock.cpp  testGripperEvaluator.cpp  testGripperObjective.cpp  testOptimization.cpp
(+317 files in other folders)
