SET(SRC_FILES
	${SRC_FILES}
	CACHE INTERNAL ""
)

ADD_SUBDIRECTORY(models)
ADD_SUBDIRECTORY(geometry)
ADD_SUBDIRECTORY(util)
ADD_SUBDIRECTORY(context)
ADD_SUBDIRECTORY(loaders)
ADD_SUBDIRECTORY(grasps)
ADD_SUBDIRECTORY(simulation)
ADD_SUBDIRECTORY(tools)
ADD_SUBDIRECTORY(plugin)
ADD_SUBDIRECTORY(process)
ADD_SUBDIRECTORY(optimization)
ADD_SUBDIRECTORY(math)
ADD_SUBDIRECTORY(evaluation)
ADD_SUBDIRECTORY(sandbox)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(old)
